sass files separation, add padding for extra small devices

--- a/1/index.html
+++ b/1/index.html
@@ -38,7 +38,7 @@
   </header>
 
   <main>
-    <section class="container mb-3">
+    <section class="container xsm-padding mb-3">
       <div class="row">
         <aside class="col-lg-4 p-0">
           <div class="row m-0 text-white justify-content-between gutter">
@@ -65,7 +65,7 @@
             </div>
           </div>
         </aside>
-        <article class="col-lg-8 info-content order-sm-first order-lg-last mb-3">
+        <article class="col-lg-8 info-content order-first order-lg-last mb-3">
           <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper a nisl sit amet
             vulputate.</h2>
 
@@ -150,7 +150,7 @@
       </div>
     </section>
 
-    <section class="container mb-3 text-center">
+    <section class="container xsm-padding mb-3 text-center">
       <div class="row">
         <div class="col-sm main-content-2">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque semper a nisl sit amet
